# ProjectFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  DESIGN.md  Makefile  README.md  skills-lock.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agent/: __init__.py  coordinator.py  llm_client.py  output_schemas.py  prompts.py  workflow.py
backend/app/api/: routes_action_cards.py  routes_agent.py  routes_agent_conversations.py  routes_agent_proposals.py  routes_agent_runtime.py  routes_agent_tools.py  routes_assignments.py  routes_checkins.py  routes_evaluation_evidence.py  routes_export.py  routes_health.py  routes_llm.py  routes_memories.py  routes_projects.py  routes_replans.py  routes_resources.py  routes_risks.py  routes_stages.py  routes_tasks.py  routes_uploads.py  routes_workspaces.py
backend/app/core/: config.py  database.py  security.py
backend/app/memory/: __init__.py  __main__.py  warmup.py
backend/app/models/: __init__.py  agent_conversation.py  agent_event.py  agent_proposal.py  agent_run_state.py  enums.py  stage.py  workspace.py
backend/app/schemas/: action_card.py  agent_conversation.py  agent_flow.py  agent_proposal.py  assignment.py  checkin.py  common.py  evaluation_evidence.py  health.py  llm.py  project.py  project_state.py  replan.py  resource.py  risk.py  runtime.py  stage.py  task.py  workspace.py  workspace_state.py
backend/app/seed/: demo_blocker_scenario.py  demo_projectflow.py  reset.py
backend/app/services/: action_card_service.py  agent_conversation_service.py  agent_flow_service.py  (+18 more)
(+520 files in other folders)
