[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projectflow-backend"
version = "0.1.0"
description = "FastAPI backend for ProjectFlow MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]
